--- a/loja-app/src/app/shared/nav/nav.component.html
+++ b/loja-app/src/app/shared/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <a class="navbar-brand" href="#">Navbar</a>
     
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,11 +13,11 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto ">
         <li class="nav-item dropdown" ngbDropdown>
-          <a class="nav-link dropdown-toggle" id="dropdown01" ngbDropdownToggle>Category</a>
+          <a class="nav-link dropdown-toggle" id="dropdown01" ngbDropdownToggle>Olá visitante</a>
           <div class="dropdown-menu" aria-labelledby="dropdown01" ngbDropdownMenu>
-            <a class="dropdown-item" href="#">Angular</a>
-            <a class="dropdown-item" href="#">React</a>
-            <a class="dropdown-item" href="#">Vue.js</a>
+            <a class="dropdown-item" href="/login">Login</a>
+            <a class="dropdown-item" href="/usuario">Cliente novo? Cadastrar</a>
+            <a class="dropdown-item" href="/produto">Cadastro produto</a>
           </div>
         </li>
       </ul>
